# RayTracing

./: CMakeLists.txt  README.md
cmake/: target-link-libraries-linux.cmake
include/: base.h  camera.h  canvas.h  object.h  renderer.h  shader.h
shaders/: raytracer.comp  screen.frag  screen.vert
source/: camera.cpp  canvas.cpp  object.cpp  renderer.cpp  shader.cpp
